--- a/item_detail.html
+++ b/item_detail.html
@@ -7,15 +7,17 @@
 
     <title>JollyBell</title>
 </head>
-<body>
-<div class="main">
-    <header>
-        <div class="header_top">
-            <a href="index.html">
-                <svg class="jolybell" xmlns="http://www.w3.org/2000/svg" viewBox=""><path d="M0 0v40h65V0H0zm13.42 26.98c0 1.41-.17 2.57-.52 3.47-.35.9-.81 1.62-1.4 2.13-.59.52-1.26.88-2.01 1.1-.76.21-1.55.32-2.38.32H6.03c-.31 0-.66-.03-1.03-.08v-3.99c.24.03.49.04.76.04h.76c.69 0 1.28-.17 1.77-.52s.74-1.06.74-2.15V6h4.39v20.98zm16.58.14c0 2.22-.56 3.92-1.67 5.1C27.21 33.41 25.6 34 23.5 34s-3.71-.59-4.83-1.78S17 29.33 17 27.12V12.88c0-2.22.56-3.92 1.67-5.1C19.79 6.59 21.4 6 23.5 6s3.71.59 4.83 1.78S30 10.67 30 12.88v14.24zM44.76 34H33V6h4.4v24h7.36v4zm7.94 0h-4.4v-9.28L42.74 6h4.6l3.36 12.76L54.06 6h4.2L52.7 24.72V34zm7.54 0H56v-4.24h4.24V34zM25.12 10.52c.4.4.6 1.1.6 2.09v14.78c0 .99-.2 1.69-.6 2.09-.4.4-.94.61-1.62.61-.67 0-1.21-.2-1.62-.61-.4-.4-.6-1.1-.6-2.09V12.61c0-.99.2-1.69.6-2.09.4-.4.94-.61 1.62-.61.67 0 1.21.2 1.62.61zM76.78 6c2.34 0 4.04.53 5.08 1.6 1.05 1.07 1.57 2.68 1.57 4.84v1c0 1.44-.23 2.63-.69 3.56-.46.93-1.2 1.63-2.21 2.08 1.23.45 2.09 1.19 2.59 2.22.5 1.03.76 2.29.76 3.78v2.28c0 2.16-.57 3.81-1.72 4.94-1.14 1.13-2.85 1.7-5.11 1.7H70V6h6.78zm-2.3 4v7.4h1.75c.84 0 1.5-.21 1.98-.64.47-.43.71-1.2.71-2.32v-1.56c0-1.01-.18-1.75-.55-2.2-.36-.45-.94-.68-1.73-.68h-2.16zm0 11.4V30h2.57c.76 0 1.34-.2 1.73-.6.39-.4.59-1.12.59-2.16V24.8c0-1.31-.22-2.2-.67-2.68-.45-.48-1.19-.72-2.22-.72h-2zm15.92-3.6h6.24v4H90.4V30h7.92v4H86V6h12.32v4H90.4v7.8zM115 6h4.4v24h7.6v4h-12V6zm-14 0h4.4v24h7.36v4H101V6zM70 38h57v2H70v-2zm0-38h50v2H70V0z"></path></svg>
-            </a>
+<body style="background: #111113!important">
+<div class="main" style="height: auto">
+    <header style="background: #111113!important">
+        <div class="header_top spec_menu" style="background: #111113!important">
+            <div class="header_top__logo">
+                <a href="index.html">
+                    <svg class="jolybell" xmlns="http://www.w3.org/2000/svg" viewBox=""><path d="M0 0v40h65V0H0zm13.42 26.98c0 1.41-.17 2.57-.52 3.47-.35.9-.81 1.62-1.4 2.13-.59.52-1.26.88-2.01 1.1-.76.21-1.55.32-2.38.32H6.03c-.31 0-.66-.03-1.03-.08v-3.99c.24.03.49.04.76.04h.76c.69 0 1.28-.17 1.77-.52s.74-1.06.74-2.15V6h4.39v20.98zm16.58.14c0 2.22-.56 3.92-1.67 5.1C27.21 33.41 25.6 34 23.5 34s-3.71-.59-4.83-1.78S17 29.33 17 27.12V12.88c0-2.22.56-3.92 1.67-5.1C19.79 6.59 21.4 6 23.5 6s3.71.59 4.83 1.78S30 10.67 30 12.88v14.24zM44.76 34H33V6h4.4v24h7.36v4zm7.94 0h-4.4v-9.28L42.74 6h4.6l3.36 12.76L54.06 6h4.2L52.7 24.72V34zm7.54 0H56v-4.24h4.24V34zM25.12 10.52c.4.4.6 1.1.6 2.09v14.78c0 .99-.2 1.69-.6 2.09-.4.4-.94.61-1.62.61-.67 0-1.21-.2-1.62-.61-.4-.4-.6-1.1-.6-2.09V12.61c0-.99.2-1.69.6-2.09.4-.4.94-.61 1.62-.61.67 0 1.21.2 1.62.61zM76.78 6c2.34 0 4.04.53 5.08 1.6 1.05 1.07 1.57 2.68 1.57 4.84v1c0 1.44-.23 2.63-.69 3.56-.46.93-1.2 1.63-2.21 2.08 1.23.45 2.09 1.19 2.59 2.22.5 1.03.76 2.29.76 3.78v2.28c0 2.16-.57 3.81-1.72 4.94-1.14 1.13-2.85 1.7-5.11 1.7H70V6h6.78zm-2.3 4v7.4h1.75c.84 0 1.5-.21 1.98-.64.47-.43.71-1.2.71-2.32v-1.56c0-1.01-.18-1.75-.55-2.2-.36-.45-.94-.68-1.73-.68h-2.16zm0 11.4V30h2.57c.76 0 1.34-.2 1.73-.6.39-.4.59-1.12.59-2.16V24.8c0-1.31-.22-2.2-.67-2.68-.45-.48-1.19-.72-2.22-.72h-2zm15.92-3.6h6.24v4H90.4V30h7.92v4H86V6h12.32v4H90.4v7.8zM115 6h4.4v24h7.6v4h-12V6zm-14 0h4.4v24h7.36v4H101V6zM70 38h57v2H70v-2zm0-38h50v2H70V0z"></path></svg>
+                </a>
+            </div>
         </div>
-        <div class="header_bot">
+        <div class="header_bot spec_menu" style="background: #111113!important">
             <div class="header_bot__left">
 
             </div>
@@ -44,19 +46,68 @@
             </div>
         </div>
     </header>
-
-
-    <video id="background-video" autoplay loop muted poster="">
-        <source src="media/SygSecTq61CKMMZ.mp4" type="video/mp4">
-    </video>
 </div>
-<div class="quote">
-    <p>ЕСТЬ ТОЛЬКО <span>БЕЛЫЙ</span> И ЧЁРНЫЙ, ОСТАЛЬНОЕ - ОТТЕНКИ.</p>
+
+<div class="item">
+    <div class="item__title store__title">Ультра Черная Футболка</div>
+    <div class="item__info">
+        <div class="item__info__left">
+            <img src="media/bomj_black.webp" alt="bomj black">
+        </div>
+        <div class="item__info__right">
+            <div class="item__info__right__price">3500 RUB</div>
+            <div class="item__info__right__desc">
+                <pre>
+Тонкая. Легкая. Ультра черная.
+
+Лимитированная версия футболки B.O.M.J - первая единица контрбрендовой
+линии одежды. Потрясающие качество в совместительстве с уточненным
+подходом к деталям, которым не могут похвастаться именитые раздутые фирмы.
+
+Ткань сорта пенье
+
+Состав: 95% cotton, 5% spandex. Плотность 170 г/м²
+
+В комплекте идут стикеры Игра в Кальмара
+
+*Колличество ограничено
+                </pre>
+            </div>
+            <div class="item__info__right__info">
+                <p>РАЗМЕРНАЯ СЕТКА</p>
+                <p>УХОД ЗА ВЕЩЬЮ</p>
+            </div>
+            <div class="item__info__right__size">
+                Выберите размер:
+                <div class="sizes">
+                    <p class="size-active">XS</p>
+                    <p>S</p>
+                    <p>M</p>
+                    <p>L</p>
+                    <p>XL</p>
+                    <p>2XL</p>
+                    <p>3XL</p>
+                </div>
+            </div>
+            <div class="item__info__right__buy">
+                <p>Количество</p>
+                <div class="buy-area">
+                    <div class="buy-area__qtty">
+                        <p>-</p>
+                        <p class="qtty-active">1</p>
+                        <p>+</p>
+                    </div>
+                    <p class="buybtn">ДОБАВИТЬ В КОРЗИНУ</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 <div class="footer">
     <div class="footer__row">
         <div class="footer__row__left footer_menu">
-            <a href="special.html">Новое</a>
+            <a href="">Новое</a>
             <a href="">Футболки</a>
             <a href="">Свитшоты</a>
             <a href="">Худи</a>
